--- a/manifests/guest-book/configmap.yml
+++ b/manifests/guest-book/configmap.yml
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
   name: guest-book
 data:
-  ui_properties_file_name: "abhi-interface.properties"
+  ui_properties_file_name: "praveen-interface.properties"
